Revert z-index (fixed in Paragraphs instead)

--- a/css/pfp.scss
+++ b/css/pfp.scss
@@ -384,8 +384,6 @@ $mincol_width: 16rem;
   > .content {
     width: $contained-width;
     margin: 0 auto;
-    position: relative;
-    z-index: 999;
   }
 }
 @media (min-width: $tablet-min) {
